# luicellas-stalker

./: .gitignore  Cargo.toml  install.sh  luicellas-stalker.service  luicellas-stalker.timer  readme.md
.github/workflows/: rust.yml
src/: main.rs
systemd/system/: install.sh  remove.sh  systemd.service  systemd.timer  sysusers.conf  tmpfiles.conf
