[package]
name = "luicellas-stalker"
description = "Send the current ice cream varieties to the telegram channel"
version = "0.1.1"
license = "MIT"
repository = "https://github.com/EdJoPaTo/luicellas-stalker"
authors = ["EdJoPaTo <luicellas-stalker-rust@edjopato.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# See https://doc.rust-lang.org/rustc/codegen-options/index.html
codegen-units = 1
lto = true

[dependencies]
anyhow = "1"
frankenstein = "0.4"
regex = "1"
ureq = "2.1.1"
